Added Downlaod CV button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1321,8 +1321,9 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Starter Section Section
+# Button Code
 --------------------------------------------------------------*/
-.starter-section {
-    /* Add your styles here */
+.download-button {
+    background-color: var(--accent-color);
+    color: white;
 }
