Update portfolio details and enhance styling for better presentation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -931,6 +931,15 @@ section,
     height: 350px;
 }
 
+.portfolio-icon-tile {
+    background-color: var(--surface-color);
+}
+
+.portfolio-dollar-icon {
+    font-size: 120px;
+    color: green;
+}
+
 .portfolio-item {
     width: 350px;
     height: 350px;
